# one-deploy-validation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.yml
inventory/group_vars/: all.yml
inventory/reference/: example.yml
inventory/reference/group_vars/: all.yml
inventory/two-clusters/: hosts.yml
inventory/two-clusters/group_vars/: all.yml
playbooks/: cleanup-test-vm-template.yml  fe-ha.yml  report_input_vars.yml.example  validation.yml  verification.yml
playbooks/templates/: _report_logo_fragment.html  appendix-cloud-report.j2  print_fix.css  vm.tmpl.j2
roles/cleanup_test_vm/tasks/: main.yml
roles/conn_matrix/defaults/: main.yml
roles/conn_matrix/tasks/: cleanup.yml  cleanup_conn_matrix_per_host.yml  collect_pubkeys.yml  conn_matrix_per_host.yml  frontend_cleanup.yml  frontend_create_vms.yml  main.yml  node_generate_key.yml  node_run_tests.yml  render_report.yml
roles/conn_matrix/vars/: main.yml
roles/fe_ha/tasks/: main.yml
roles/network-benchmark/tasks/: network_benchmark.yml
roles/network_validation/tasks/: cluster_networks.yml  main.yml  networks_verification.yml  per_cluster.yml
roles/oneflow_validation/defaults/: main.yml
roles/oneflow_validation/tasks/: main.yml  per_cluster.yml
roles/oneflow_validation/vars/: main.yml
roles/prepare_test_vm/tasks/: main.yml
roles/storage-benchmark/tasks/: main.yml  storage_benchmark.yml
roles/storage-benchmark/vars/: main.yml
roles/test_vm/defaults/: main.yml
roles/test_vm/tasks/: cleanup.yml  connect.yml  create_vm.yml  main.yml  network.yml  per_cluster.yml  prepare.yml
(+17 files in other folders)
