[project]
name = "one-deploy-validation"
version = "0.0.0"
description = "OpenNebula Engineering Ansible Playbooks for Deployment Validation"
authors = [{ name = "OpenNebula", email = "contact@opennebula.io" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.hatch.envs.validation-default]
skip-install = true
installer = "uv"
dependencies = [
  "ansible-core>=2.17,<2.19",
  "jmespath",
  "netaddr"
]
